--- a/Assignment_1/README
+++ b/Assignment_1/README
@@ -1,7 +1,9 @@
-Name: Nikki Poentis
+1) Identifying Information
 
-Course number and Section: CPSC 298-07 / 298-09
+- Name: Nikki Poentis
+- Course number and Section: CPSC 298-07 / 298-09
+- Assignment: 1
 
-References:
+2) References:
 
-http://www.cplusplus.com/reference/iomanip/setprecision/
+- http://www.cplusplus.com/reference/iomanip/setprecision/
