--- a/Assignment_2/README
+++ b/Assignment_2/README
@@ -1,9 +1,7 @@
-Name: Nikki Poentis
+1) Identifying Information
+- Name: Nikki Poentis
+- Course number and Section: CPSC 298-07 / 298-09
+- Assignment: 2
 
-Chapman email: poentis@chapman.edu
-
-Course number and Section: CPSC 298-07 / 298-09
-
-References:
-
-none
+2) References:
+- none
